# Sdl3-test

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  main.cpp
